--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@
 ##########################################
 
 # ➤ Repository GitHub personale
-NOMEGITHUB=nzo66
-NOMEREPO=TV
+NOMEGITHUB=michael1900
+NOMEREPO=VTsx12
 
 ##########################################
 #        LINK DEI VARI SITI              #
@@ -34,7 +34,7 @@ LINK_DADDY=https://thedaddy.click
 CANALI_DADDY=si
 
 # ➤ Includere eventi in lingua inglese? (si / no)
-EVENTI_EN=no
+EVENTI_EN=si
 
 # ➤ Includere canali WORLD? (si / no)
-WORLD=no
+WORLD=si
